sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: forward reference extends over definition of variable ecart
  var ecart:Int = lgr
                  ^AlgShellSort:4: error: forward reference extends over definition of variable v
  var ecart:Int = lgr
                  ^AlgShellSort:4: error: forward reference extends over definition of variable lgr
  var ecart:Int = lgr
                  ^