sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  
  var ecart:Int = lgr
  
  var v:Int = 0
  var lgr:Int = getNombreValeurs()
  for (i <- 1 to lgr-1) {
    v = getValeur(i)
    ecart = ecart/2
    while (i-ecart>0 && v < getValeur(i-ecart)) {
      copie(i-ecart,i-ecart+1)
      ecart = ecart / 2
    }
    setValeur(i-ecart+1,v)
  }
  
}